Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARD.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef int BOOL;
typedef void * HCARD;
typedef int HCARD;
typedef void ** LPHCARD;
typedef int * LPHCARD;
typedef void * HCORE;
typedef int HCORE;
typedef void ** LPHCORE;
typedef int * LPHCORE;
typedef void ** LPHRPC;
typedef int * LPHRPC;
typedef int ERRVAL;
BTICardAPI ERRVAL __stdcall BTICard_HandleMakeCard(LPHCARD lphCard,LPINT lpcorenum,HCORE hCore);
BTICardAPI ERRVAL __stdcall BTICard_HandleMakeCore(LPHCORE lphCore,INT corenum,HCARD hCard);
BTICardAPI ERRVAL __stdcall BTICard_HandleMakeRPC(LPHCARD hCard_Remote,LPHRPC lphRPC,HCARD handleval);
BTICardAPI BOOL __stdcall BTICard_HandleOkay(HCARD handleval);
BTICardAPI ULONG __stdcall BTICard_HeapAlloc(INT section,ULONG wordcount,HCORE handleval);
BTICardAPI ULONG __stdcall BTICard_HeapAllocAll(INT section,LPULONG wordcount,HCORE handleval);
BTICardAPI ULONG __stdcall BTICard_HeapAllocEx(USHORT configval,INT section,ULONG wordcount,HCORE handleval);
BTICardAPI ULONG __stdcall BTICard_HeapWipe(INT section,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_HPIFill(USHORT value,USHORT addrval,INT countval,HCORE handleval);
BTICardAPI ULONG __stdcall BTICard_HPIRdL(USHORT addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_HPIRdsL(LPULONG valueptr,USHORT addrval,INT countval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_HPIRdsW(LPUSHORT valueptr,USHORT addrval,INT countval,HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_HPIRdW(USHORT addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_HPIWrL(ULONG value,USHORT addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_HPIWrsL(LPULONG valueptr,USHORT addrval,INT countval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_HPIWrsW(LPUSHORT valueptr,USHORT addrval,INT countval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_HPIWrW(USHORT value,USHORT addrval,HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_IDRegRd(INT gate_array_num,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_IDRegWr(USHORT value,INT gate_array_num,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_IntClear(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_IntDisable(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_IntEnable(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_IntEnableCond(HCORE handleval);
BTICardAPI LPVOID __stdcall BTICard_IntGet(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_IntInstall(LPVOID hEvent,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_IntReset(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_IntUninstall(HCORE handleval);
BTICardAPI ULONG __stdcall BTICard_IORdL(INT addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_IORdsL(LPULONG valueptr,ULONG addrval,INT countval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_IORdsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_IORdW(INT addrval,HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_IOWINRdW(INT addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_IOWINWrW(USHORT value,INT addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_IOWrL(ULONG value,INT addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_IOWrsL(LPULONG valueptr,ULONG addrval,INT countval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_IOWrsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_IOWrW(USHORT value,INT addrval,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_IRIGConfig(ULONG configval,HCORE handleval);
BTICardAPI ULONG __stdcall BTICard_IRIGFieldGetDays(ULONG irigvalh,ULONG irigvall);
BTICardAPI ULONG __stdcall BTICard_IRIGFieldGetHours(ULONG irigvalh,ULONG irigvall);
BTICardAPI ULONG __stdcall BTICard_IRIGFieldGetMicrosec(ULONG irigvalh,ULONG irigvall);
BTICardAPI ULONG __stdcall BTICard_IRIGFieldGetMillisec(ULONG irigvalh,ULONG irigvall);
BTICardAPI ULONG __stdcall BTICard_IRIGFieldGetMin(ULONG irigvalh,ULONG irigvall);
BTICardAPI ULONG __stdcall BTICard_IRIGFieldGetSec(ULONG irigvalh,ULONG irigvall);
BTICardAPI VOID __stdcall BTICard_IRIGFieldPutDays(ULONG value,LPULONG irigvalh,LPULONG irigvall);
BTICardAPI VOID __stdcall BTICard_IRIGFieldPutHours(ULONG value,LPULONG irigvalh,LPULONG irigvall);
BTICardAPI VOID __stdcall BTICard_IRIGFieldPutMicrosec(ULONG value,LPULONG irigvalh,LPULONG irigvall);
BTICardAPI VOID __stdcall BTICard_IRIGFieldPutMillisec(ULONG value,LPULONG irigvalh,LPULONG irigvall);