Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARDNET.CS

            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HandleMakeCard@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_HandleMakeCard(ref IntPtr lphcard, ref Int32 lpcorenum, IntPtr hcore);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HandleMakeCore@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_HandleMakeCore(ref IntPtr lphcore, Int32 corenum, IntPtr hcard);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HandleMakeRPC@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_HandleMakeRPC(ref IntPtr hcard_remote, ref UInt32 lphrpc, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HandleOkay@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_HandleOkay(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HeapAlloc@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_HeapAlloc(Int32 section, UInt32 wordcount, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HeapAllocAll@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_HeapAllocAll(Int32 section, ref UInt32 wordcount, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HeapAllocEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_HeapAllocEx(UInt16 configval, Int32 section, UInt32 wordcount, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HeapWipe@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_HeapWipe(Int32 section, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HPIFill@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_HPIFill(UInt16 value, UInt16 addrval, Int32 countval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HPIRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_HPIRdL(UInt16 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HPIRdsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_HPIRdsL(UInt32[] valueptr, UInt16 addrval, Int32 countval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HPIRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_HPIRdsW(UInt16[] valueptr, UInt16 addrval, Int32 countval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HPIRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_HPIRdW(UInt16 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HPIWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_HPIWrL(UInt32 value, UInt16 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HPIWrsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_HPIWrsL(UInt32[] valueptr, UInt16 addrval, Int32 countval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HPIWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_HPIWrsW(UInt16[] valueptr, UInt16 addrval, Int32 countval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HPIWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_HPIWrW(UInt16 value, UInt16 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IDRegRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_IDRegRd(Int32 gate_array_num, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IDRegWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_IDRegWr(UInt16 value, Int32 gate_array_num, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IntClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_IntClear(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IntDisable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_IntDisable(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IntEnable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_IntEnable(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IntEnableCond@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_IntEnableCond(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IntGet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern IntPtr BTICard_IntGet(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IntInstall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_IntInstall(IntPtr hevent, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IntReset@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_IntReset(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IntUninstall@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_IntUninstall(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IORdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_IORdL(Int32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IORdsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_IORdsL(UInt32[] valueptr, UInt32 addrval, Int32 countval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IORdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_IORdsW(UInt16[] valueptr, UInt32 addrval, Int32 countval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IORdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_IORdW(Int32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IOWINRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_IOWINRdW(Int32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IOWINWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_IOWINWrW(UInt16 value, Int32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IOWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_IOWrL(UInt32 value, Int32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IOWrsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_IOWrsL(UInt32[] valueptr, UInt32 addrval, Int32 countval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IOWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_IOWrsW(UInt16[] valueptr, UInt32 addrval, Int32 countval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IOWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_IOWrW(UInt16 value, Int32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_IRIGConfig(UInt32 configval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGFieldGetDays@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_IRIGFieldGetDays(UInt32 irigvalh, UInt32 irigvall);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGFieldGetHours@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_IRIGFieldGetHours(UInt32 irigvalh, UInt32 irigvall);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGFieldGetMicrosec@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_IRIGFieldGetMicrosec(UInt32 irigvalh, UInt32 irigvall);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGFieldGetMillisec@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_IRIGFieldGetMillisec(UInt32 irigvalh, UInt32 irigvall);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGFieldGetMin@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_IRIGFieldGetMin(UInt32 irigvalh, UInt32 irigvall);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGFieldGetSec@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_IRIGFieldGetSec(UInt32 irigvalh, UInt32 irigvall);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGFieldPutDays@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_IRIGFieldPutDays(UInt32 value, ref UInt32 irigvalh, ref UInt32 irigvall);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGFieldPutHours@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_IRIGFieldPutHours(UInt32 value, ref UInt32 irigvalh, ref UInt32 irigvall);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGFieldPutMicrosec@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_IRIGFieldPutMicrosec(UInt32 value, ref UInt32 irigvalh, ref UInt32 irigvall);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGFieldPutMillisec@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_IRIGFieldPutMillisec(UInt32 value, ref UInt32 irigvalh, ref UInt32 irigvall);
